# autodo-engine

./: README.md  pyproject.toml
autodoengine/: __init__.py  api.py  main.py
autodoengine/affairs/: __init__.py
autodoengine/core/: __init__.py  enums.py  errors.py  graph_node_common.py  interfaces.py  template_affair.py  types.py
autodoengine/examples/: flow_graph_compile_example.py  flow_graph_example.py
autodoengine/flow_graph/: __init__.py  aof.py  compiler.py  content_handlers.py  graph_loader.py  graph_validator.py  models.py  node_runtime.py  node_runtime_v2.py  route_view.py  runtime.py  templates.py  workflow.py  workflow_v2.py
autodoengine/scheduling/: __init__.py  action_rules.py  block_scope_lifter.py  candidate_actions.py  candidate_builder.py  decision_rule_framework.py  dispatch_executor.py  edge_scorer.py  event_logger.py  pa_decision_adapter.py  (+7 more)
config/: affair_metadata_overrides.json  affair_registry.json
demos/: demo_v3_decision_rule_framework_examples.py  demo_v3_task_drill_abnormal_paths.py  demo_v3_task_drill_pa_compare.py  demo_v3_task_drill_pa_off.py  demo_v4_decision_department_examples.py
docs/: API手册.md  产品需求文档.md  工具能力迁移映射.md  开发日志.md  开发者指南.md  用户手册.md
tests/: test_affair_management.py  test_candidate_actions.py  test_engine_standalone_mode.py  test_graph_loader.py  test_public_capability_platform.py  test_result_protocol.py  test_skill_renderer.py  test_state_machine.py  test_task_loop_basic.py  test_task_loop_blocked.py  test_task_loop_decision_framework.py  test_task_loop_split_resume.py  test_v4_audit_and_block_scope.py
(+97 files in other folders)
