[project]
name = "autodo-engine"
version = "0.4.0"
description = "工具包：用于按通用的任务事务工作流程系统的引擎。"
authors = [
    { name = "Ethan Lin", email = "ElementsPhoenix@outlook.com" },
]
requires-python = ">=3.13"
dependencies = [
    "bibtexparser>=1.4.0",
    "pandas>=3.0.1",
    "dashscope>=1.20.0",
    "openai>=1.40.0",
    "simpleeval>=0.9.13",
    "playwright>=1.58.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["autodoengine*"]
exclude = ["demos*", "docs*", "config*", "flowgraphs*", "nodes*"]

[project.scripts]
# 在安装后可通过 `aok` 命令运行主入口
aok = "autodoengine.main:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
